--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="rock paper scissors game. rock paper scissors. game. browser game. rock paper scissors browser game. rock paper scissors game"/>
     <meta name="keywords" content="rock, paper, scissors, game, browser game" />
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
   </head>
   <body></body>
 </html>
