Add header and heading

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/6793733.png">
     <title>Rock Paper Scissors</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+        <h1>Rock Paper Scissors</h1>
+    </header>
+  </body>
 </html>
