--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
   <body>
     <header>
         <h1>Rock Paper Scissors</h1>
+        <section id="game-area">
+            <div id="players-choice">
+                
+            </div>
+            <div id="bots-choice">
+                
+            </div>
+        </section>
     </header>
   </body>
 </html>
