--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="rock paper scissors game. rock paper scissors. game. browser game. rock paper scissors browser game. rock paper scissors game"/>
     <meta name="keywords" content="rock, paper, scissors, game, browser game" />
+    <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/6793733.png">
     <title>Rock Paper Scissors</title>
   </head>
