add and style rules to the footer

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div id="rules">
+            <p>Paper beats Rock | Rock beats Scissors | Scissors beats Paper</p>
+        </div>
+    </footer>
   </body>
 </html>
