--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <main>
       <section id="game-area">
         <div id="players-choice">
-          <p id="player-score">
+          <h2 id="player-score">
             Your Score:
             <span>0</span>
-          </p>
+          </h2>
           <img
             id="player-image"
             src="assets/images/6793733.png"
@@ -36,10 +36,10 @@
           />
         </div>
         <div id="bots-choice">
-          <p id="bots-score">
+          <h2 id="bots-score">
             Bots Score:
             <span>0</span>
-          </p>
+          </h2>
           <img
             id="bot-image"
             src="assets/images/6793733.png"
@@ -47,7 +47,7 @@
           />
         </div>
         <div id="choices">
-            <p>Make your choice:</p>
+            <h3>Make your choice:</h3>
           <button>Rock</button>
           <button>Paper</button>
           <button>Scissors</button>
@@ -56,7 +56,7 @@
     </main>
     <footer>
         <div id="rules">
-            <p>Paper beats Rock | Rock beats Scissors | Scissors beats Paper</p>
+            <h2>Paper beats Rock | Rock beats Scissors | Scissors beats Paper</h2>
         </div>
     </footer>
   </body>
