--- a/index.html
+++ b/index.html
@@ -66,5 +66,6 @@
             <h2>Paper beats Rock | Rock beats Scissors | Scissors beats Paper</h2>
         </div>
     </footer>
+    <script src="assets/script.js"></script>
   </body>
 </html>
